# gameoflife.rs

./: Cargo.toml  index.html  styles.css
src/: main.rs
