[package]
name = "gameoflife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.79"
gloo-timers = "0.2.3"
rand = "^0.8"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
wasm-logger = "0.2"
yew = "0.19" 

[features]
default = []
